--- a/rollforbugs_website/templates/layout_base.html
+++ b/rollforbugs_website/templates/layout_base.html
@@ -47,6 +47,7 @@
                     </li>
                     <li><a href="/about">About</a></li>
                 </ul>
+                <div class="navbar-text navbar-right">{{ get_fortune() }}</div>
             </div>
         </div>
         {% endblock %}
