More stuff and venv

--- a/rollforbugs_website/templates/project_base.html
+++ b/rollforbugs_website/templates/project_base.html
@@ -1,1 +1,9 @@
-{% extends 'index.html' %}
+{% extends 'layout_base.html' %}
+{% block content %}
+    <div class="bs-component">
+        <div class="jumbotron">
+            {% block jumbotron %}
+            {% endblock %}
+        </div>
+    </div>
+{% endblock %}
