--- a/rollforbugs_website/templates/layout_base.html
+++ b/rollforbugs_website/templates/layout_base.html
@@ -43,10 +43,10 @@
                     <li><a href="{{ url_for('index_page') }}">Home</a></li>
                     <li><a href="{{ url_for('blog_page') }}">Blog</a></li>
                     <li class="dropdown">
-                        <a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Projects
+                        <a href="#" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Projects
                             <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/projects/shitty-keyboard">Shitty Keyboard</a></li>
+                            <li><a href="{{ url_for('projects_shitty_keyboard_page') }}">Shitty Keyboard</a></li>
                         </ul>
                     </li>
                     <li><a href="{{ url_for('about_page') }}">About</a></li>
@@ -82,7 +82,7 @@
     <!-- Now we get to do some of our own shit -->
     <script type="text/javascript">
         // Load material design scripts
-        $.material.init()
+        $.material.init();
 
         // Mark the active element in the navbar
         $(document).ready(function () {
